--- a/scss/_resgistro.scss
+++ b/scss/_resgistro.scss
@@ -10,7 +10,7 @@
     padding: 5px;
     margin: 20px 0px;
     background-color: #fff;
-    border: solid 3px #79ADDC;
+    border: solid 3px #fd0202;
     border-radius: 30px;
   }
   legend {
@@ -32,8 +32,8 @@
   }
   .form__btn {
     padding: 4px;
-    background-color: #003554;
-    border: solid 3px #79ADDC;
+    background-color: #540007;
+    border: solid 3px #fd0202;
     border-radius: 15px;
     color: #fff;
   }
