--- a/css/pruebacss.css
+++ b/css/pruebacss.css
@@ -198,3 +198,131 @@
 
 .card {
   margin: 30px !important; }
+
+.caja__carro {
+  display: flex;
+  flex-direction: column;
+  row-gap: 40px; }
+
+.card__carro {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  padding: 3px;
+  margin: 0 20px;
+  background-color: #fff;
+  width: max-width;
+  height: 100px;
+  border: solid 3px #540007;
+  border-radius: 40px; }
+
+.card__carro-p {
+  font-weight: bold; }
+
+.card__carro-img {
+  width: 100px;
+  height: 95px; }
+
+.btn__tacho {
+  border: none;
+  width: 60px;
+  height: 70px; }
+
+.btn__tacho-tacho {
+  width: 60px;
+  height: 70px; }
+
+.btnYTotal {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 20px; }
+
+.vaciar__carrito {
+  padding: 4px;
+  background-color: #fff;
+  border: solid 3px #fd0202;
+  border-radius: 15px;
+  color: #540007; }
+
+.totalCarro {
+  width: 200px;
+  height: 40px;
+  padding: 4px;
+  background-color: #fff;
+  border: solid 3px #79ADDC;
+  border-radius: 15px;
+  text-align: center;
+  color: #540007; }
+
+.cajaForm {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; }
+
+fieldset {
+  width: 320px;
+  height: 300px;
+  padding: 5px;
+  margin: 20px 0px;
+  background-color: #fff;
+  border: solid 3px #fd0202;
+  border-radius: 30px; }
+
+legend {
+  text-align: center;
+  font-weight: bold;
+  font-size: 20px; }
+
+.form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px; }
+
+.form__p {
+  font-weight: bold;
+  font-size: 15px;
+  text-align: center; }
+
+.form__btn {
+  padding: 4px;
+  background-color: #540007;
+  border: solid 3px #fd0202;
+  border-radius: 15px;
+  color: #fff; }
+
+@media screen and (min-width: 600px) {
+  header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    gap: 0.5rem; } }
+
+@media screen and (min-width: 320px) {
+  .grid__cards {
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-items: center;
+    align-items: center;
+    margin-bottom: 20px; } }
+
+@media screen and (min-width: 800px) {
+  .caja__cards {
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    grid-template-columns: 1fr 1fr; } }
+
+@media screen and (min-width: 840px) {
+  .grid__cards {
+    grid-template-columns: 5fr 1fr; } }
+
+@media screen and (min-width: 1200px) {
+  .caja__cards {
+    grid-template-columns: 1fr 1fr 1fr; } }
