--- a/scss/_carrito.scss
+++ b/scss/_carrito.scss
@@ -25,12 +25,12 @@
   }
   .btn__tacho {
     border: none;
-    width: 60px;
-    height: 70px;
+    width: 25px;
+    height: 30px;
   }
   .btn__tacho-tacho {
-    width: 60px;
-    height: 70px;
+    width: 25px;
+    height: 30px;
   }
   .btnYTotal {
     display: flex;
@@ -51,7 +51,7 @@
     height: 40px;
     padding: 4px;
     background-color: #fff;
-    border: solid 3px #79ADDC;
+    border: solid 3px #fd0202;
     border-radius: 15px;
     text-align: center;
     color: #540007;
