--- a/scss/_pedido.scss
+++ b/scss/_pedido.scss
@@ -1,3 +1,45 @@
+.caja__cards {
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  grid-template-columns: 1fr;
+  gap: 3rem;
+}
+.card__producto {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0.8rem;
+  background-color: #fff;
+  width: 310px;
+  height: 520px;
+  border: solid 4px #fd0202;
+  border-radius: 40px;
+  gap: 0.5rem;
+}
+.card__producto-h3 {
+  text-align: center;
+  font-size: 2rem;
+  font-weight: bold;
+}
+.card__producto-boton {
+  padding: 4px;
+  background-color:  #540007;
+  border: solid 3px #fd0202;
+  border-radius: 15px;
+  color: #fff;
+}
+.card__producto-img {
+  width: 300px;
+  height: 300px;
+}
+.login {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+}
   @media screen and (min-width: 320px) {
     .grid__cards {
       display: grid;
@@ -25,3 +67,17 @@
       grid-template-columns: 1fr 1fr 1fr;
     }
   }
+
+  .main3 {background-image: linear-gradient(rgba(0, 0, 0, 0.829),rgba(0, 0, 0, 0)), url(https://apps.studentaffairs.cmu.edu/dining/conceptinfo/conceptAssets/images/sushi%20photo_2000x1000.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    @media screen and (max-width:990px){
+            display: flex;
+            flex-direction: column;}}
